# searchbench

./: .gitignore  .gitmodules  .replit  flake.nix  pyproject.toml  pyrightconfig.json  replit.md  repomix-output.xml  run.py
attached_assets/: Pasted-Please-revise-plan-2-The-current-plan-is-close-but-I-wa_1774971651458.txt  (+6 more)
codeql/: inventory.md  langfuse_inventory.ql
harness/: .gitignore  LANGFUSE.md  entrypoints.py  log.py  logging_config.py  loop.py  loop_listeners.py  loop_machine.py  loop_types.py  policy.py  policy_loader.py  pyproject.toml  repomix-output.xml  run.py  runner.py  scorer.py  scoring_examples.py  writer.py
harness/agents/: common.py  localizer.py  writer.py
harness/backends/: __init__.py  ic.py  jc.py  mcp.py
harness/docs/: lca_localization.md  static_graph_validation.md  telemetry_sessions_cost.md
harness/entrypoints/: cli.py  flows.py  requests.py
harness/entrypoints/models/: requests.py
harness/localization/: __init__.py  agent_runtime.py  errors.py  eval.py  evaluate.py  evaluation_backend.py  execute.py  executor.py  hf_materialize.py  hf_materializer.py  materializer.py  models.py  scoring.py  telemetry.py  token_usage.py
harness/localization/materialization/: __init__.py  hf_materialize.py  worktree.py
harness/localization/runtime/: agent_runtime.py  evaluate.py  execute.py  records.py
harness/localization/scoring_models/: __init__.py  engine.py  models.py
harness/localization/scoring_models/scorers/: gold_hop.py
harness/localization/static_graph/: example.py  ingest.py
harness/loop/: __init__.py  agent_common.py  loop.py  loop_listeners.py  loop_machine.py  loop_types.py  runner_agent.py
harness/observability/: __init__.py  baselines.py  cerebras_pricing.py  datasets.py  experiments.py  hf_lca.py  langfuse.py  policy_reducer.py  requests.py  runner_integration.py  score_emitter.py  session_policy.py
harness/orchestration/: __init__.py  dependencies.py  evaluation.py  listeners.py  machine.py  optimize_loop.py  runtime.py  types.py  writer.py
harness/pipeline/: __init__.py  pipeline.py  steps.py  types.py
harness/policy/: __init__.py  current.py  examples.py  load.py
harness/prompts/: __init__.py  ic_system.jinja  jc_system.jinja  policy_writer.jinja  policy_writer_system.jinja  prompt_models.py
harness/scoring/: bundle.py  engine.py  models.py  reducers.py
harness/scoring/scorers/: __init__.py  gold_hop.py  issue_hop.py  token_efficiency.py
harness/telemetry/: __init__.py  baselines.py  cerebras_pricing.py  datasets.py  evaluation_emitters.py  experiments.py  observability_models.py  policy_reducer.py
harness/telemetry/hosted/: baselines.py  datasets.py  experiments.py  hf_lca.py
harness/telemetry/tracing/: __init__.py  cerebras_pricing.py  score_emitter.py
harness/tests_harness/: conftest.py  test_backend_adapters.py  test_baselines.py  test_canonical_lca_task_model.py  test_cerebras_pricing.py  test_cli_guardrails.py  test_datasets.py  test_datasets_experiments.py  test_entrypoints_clarity.py  test_evaluation_telemetry.py  test_executor_helpers.py  test_experiments_backend.py  test_filesystem_guard.py  test_hf_loader.py  test_hf_materializer.py  test_hf_network_optin.py  test_localization.py  test_localization_evaluation_backend.py  test_localization_score_models.py  test_logging_config.py  test_loop_failures.py  test_loop_machine.py  test_loop_machine_control_score.py  test_loop_state_machine_min.py  test_loop_viz.py  test_model_strictness.py  test_observability.py  test_orchestration_dependencies.py  test_pipeline_steps_scope.py  test_pipeline_warning_semantics.py  test_policy_loader.py  test_policy_reducer.py  test_policy_sandbox.py  test_prompt_templates.py  test_repo_resolution_execution.py  test_run_canonical_path.py  test_runner_cli.py  test_runner_integration.py  test_runner_model.py  test_score_adapter.py  (+10 more)
harness/tools/: __init__.py  loop_viz.py  mcp_adapter.py  normalize.py  parser.py  registry.py  schema.py  sync_cerebras_models.py
harness/tools/backends/: __init__.py  ic_backend.py  jc_backend.py
harness/tools/ic/: __init__.py  registry.py
harness/tools/jc/: __init__.py  registry.py
harness/utils/: comparison.py  debug.py  diff.py  env.py  openai_schema.py  template_loader.py  type_loader.py
(+345 files in other folders)
