[project]
name = "harness"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cerebras-cloud-sdk>=1.67.0",
    "iterative-context",   # 👈 local workspace dep
    "jcodemunch-mcp",
    "pydantic>=2",
    "rich",                # nice CLI/logging
]

[tool.uv.sources]
jcodemunch-mcp = { workspace = true }
iterative-context = { workspace = true }
