[project]
name = "harness"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.67.0",
    "iterative-context", # 👈 local workspace dep
    "jcodemunch-mcp",
    "langfuse>=4.0.0",
    "Jinja2>=3.1.4",
    "datasets>=2.19.0",
    "openai>=2.29.0",
    "pydantic>=2",
    "rich", # nice CLI/logging
    "pytest>=8.3.0",
    "pytest-timeout>=2.3.1",
    "python-dotenv>=1.0.0",
    "python-statemachine>=3.0.0",
    "mcp>=1.26.0",
    "statemachine>=0.1",
    "pydot>=2.0.0",
    "networkx>=3.0",
    "llm-tldr>=1.5.2",
    "typer>=0.24.1",
]

[tool.uv.sources]
iterative-context = { workspace = true }
jcodemunch-mcp = { workspace = true }

[tool.basedpyright]
extraPaths = [".."]
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportMissingParameterType = "none"
reportMissingTypeStubs = "none"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
include = ["./"]
exclude = ["tests_harness", "**/tests_harness"]
