[project]
name = "iterative-context"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.0",
    "pydantic>=2.0",
    "rx>=3.0",
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "rxpy>=0.1.0",
    "basedpyright>=1.5.0",
    "ruff>=0.4.0",
    "hypothesis>=6.151.9",
    "llm-tldr>=1.5.2",
    "mcp>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iterative_context"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "B",   # bugbear
    "I",   # import sorting
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplifications
    "PL",  # pylint rules
]

ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # allow magic values in tests

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "iterative-context",
]
